couplage notebook improvment 6

--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![couplage1](images/couplage1.jpg)"
+    "![échangeur de séparation de réseau](images/couplage1.png)"
    ]
   },
   {
@@ -325,7 +325,7 @@
    "source": [
     "# Equation du stockage\n",
     "\n",
-    "![schéma simplifié du système](images/couplage2.png)"
+    "![schéma simplifié du système](images/couplage2_cc.png)"
    ]
   },
   {
