--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -316,7 +316,9 @@
     "\n",
     "Par débit unitaire, on entend le débit pour un mètre linéaire de chaussée selon le profil en long.\n",
     "\n",
-    "Lorsque le dromotherme est à l'arrêt, la température de sortie de dromotherm est obtenue par le même calcul, avec un débit unitaire nul "
+    "Lorsque le dromotherme est à l'arrêt, la température de sortie de dromotherm est obtenue par le même calcul, avec un débit unitaire nul.\n",
+    "\n",
+    "**Afin de ne pas refroidir le stockage, son alimentation ne se fera que la la température de sortie de dromotherme est supérieure à la température du stockage.**"
    ]
   },
   {
@@ -344,7 +346,7 @@
     "    m_{sable} Cp_{sable} \\frac {dy}{dt}=m_{sto} Cp_{sto} ( T_{inj\\_sto} - T_{sor\\_sto} ) + m_{pac} Cp_{pac} (T_{sor\\_pac}- T_{inj\\_pac})\n",
     "\\end{equation}\n",
     "\n",
-    "Dans l'algorithme, il conviendra de traiter les autres cas de figure (dromotherme seul en fonctionnement, PAC seule en fonctionnement, aucun des 2 équipements en fonctionnement)  "
+    "Dans l'algorithme, il conviendra de traiter les autres cas de figure (dromotherme seul en fonctionnement, PAC seule en fonctionnement, aucun des 2 équipements en fonctionnement)"
    ]
   },
   {
