--- a/Modelisation_stockage.ipynb
+++ b/Modelisation_stockage.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Modélisation du stockage thermique\n",
     "\n",
-    "![schema stockage](images/stockage2.png)\n"
+    "![schema stockage](images/stock.png)\n"
    ]
   },
   {
