--- a/Modelisation_stockage.ipynb
+++ b/Modelisation_stockage.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Modélisation du stockage thermique\n",
     "\n",
+    "Une illustration du stockage \n",
     "![schema stockage](images/stock.png)\n"
    ]
   },
