--- a/Modelisation_stockage.ipynb
+++ b/Modelisation_stockage.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "### Couche 11 (béton)\n",
     "\\begin{equation}\n",
-    "m_{beton} Cp_{beton} \\frac{dT_11}{dt}=r_{10/11}(T_{10}-T_{11})-r_{11/12}(T_{11}-T_{12})\n",
+    "m_{beton} Cp_{beton} \\frac{dT_{11}}{dt}=r_{10/11}(T_{10}-T_{11})-r_{11/12}(T_{11}-T_{12})\n",
     "\\end{equation}\n",
     "\n",
     "### Couche 12 et 13\n",
@@ -63,7 +63,7 @@
     "\n",
     "Schéma de Euler explicite\n",
     "\n",
-    "### Couche 1\n",
+    "### Couche 1 ( et pour les autres couches)\n",
     "\\begin{equation}\n",
     "T1_{n+1}=T1_{n}+\\frac{dt}{m_{sable}Cp_{sable}}(-\\frac{\\lambda}{e}(T1_{n}-T2_{n})-\\frac{T_{n}-Text_{n}}{Rth_{ext}})\n",
     "\\end{equation}\n"
